# drf-practice

./: .gitignore  .pre-commit-config.yaml  README.md  api.http  pyproject.toml  schema.yaml
api/: admin.py  filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
api/management/commands/: populate-db.py
api/migrations/: 0001_initial.py  0002_rename_produce_orderitem_product.py  0003_alter_orderitem_order_alter_product_image.py
core/: __init__.py  settings.py  urls.py
core/migrations/: 0001_initial.py
